implemented AJAX way of sending commens

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "2cpt1mp/web-2.2",
   "description": "",
   "require": {
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "ext-simplexml": "*"
   }
 }
